# platform-sim

./: .gitignore  1.md  2.md  3.md  AGENTS.md  README.md  完整计划书.md  计划书2.md  计划书原稿，需要分割.md
apps/official-sim-server/: README.md  alembic.ini  pyproject.toml  requirements.txt
apps/official-sim-server/app/: main.py
apps/official-sim-server/app/api/: router.py
apps/official-sim-server/app/api/routes/: conversation_studio.py  integration.py  query.py  runs.py  state.py
apps/official-sim-server/app/core/: config.py
apps/official-sim-server/app/domain/: aftersale_facts.py  error_injector.py  event_log.py  odoo_aftersale_fetcher.py  odoo_order_fetcher.py  odoo_shipment_fetcher.py  order_facts.py  push_delivery.py  push_dispatcher.py  scenario_engine.py  shipment_facts.py  state_machine.py
apps/official-sim-server/app/integration/: adapter.py
apps/official-sim-server/app/models/: models.py
apps/official-sim-server/fixtures/douyin_shop/error_case/: invalid_signature.json  timestamp_out_of_window.json
apps/official-sim-server/fixtures/douyin_shop/success/: order_cancelled.json  order_cancelling.json  order_completed.json  order_confirmed.json  order_created.json  order_fulfilled.json  order_paid.json  order_shipped.json  refund_applied.json  refund_approved.json  refund_completed.json  refund_rejected.json
apps/official-sim-server/fixtures/douyin_shop/users/: douyin_user_001.json  (+2 more)
apps/official-sim-server/tests/: conftest.py  test_douyin_shop.py  test_fixtures.py  test_integration.py  test_kuaishou.py  test_runs.py  test_taobao.py  test_xhs.py
docs/: AGENTS.md  (+12 more)
(+137 files in other folders)
